# ZeroCore

./: BuildInfoTemplate.data  BuildVersionTemplate.data  CMakeLists.txt  README.md
Extensions/CodeTranslator/: CMakeLists.txt  ShaderTranslationDebugHelper.cpp
Extensions/Editor/: BugReport.cpp  BugReport.hpp  CMakeLists.txt  Editor.cpp  Editor.hpp  EditorMain.cpp  EditorMain.hpp  EditorStandard.cpp  EditorStandard.hpp  EditorViewport.cpp  FindDialog.cpp  Generated.cmake  TextEditor.cpp  TextEditor.hpp
Extensions/Editor/Property/: PropertyWidgetObject.cpp
Extensions/Gameplay/: CMakeLists.txt
Extensions/Scintilla/: CMakeLists.txt
Extensions/SpirV/: CMakeLists.txt
Extensions/SpirV/SPIRV-Cross/: gitversion.h  spirv_glsl.cpp  spirv_glsl.hpp
Extensions/SpirV/SpirVFiles/: .gitignore
Extensions/UiWidget/: CMakeLists.txt
Extensions/Widget/: CMakeLists.txt
Extensions/ZilchShaders/: ArithmeticInstructions.cpp  BitInstructions.cpp  CMakeLists.txt  ConversionInstructions.cpp  EntryPointGeneration.cpp  EntryPointGeneration.hpp  FixedArray.cpp  Glsl450Extensions.cpp  LogicalInstructions.cpp  Precompiled.hpp  ShaderByteStream.cpp  ShaderIRLibraryTranslation.cpp  ShaderIRLibraryTranslation.hpp  ShaderImageIntrinsics.cpp  ShaderImageIntrinsics.hpp  ShaderIntrinsicTypes.cpp  ShaderIntrinsicTypes.hpp  ShaderIntrinsicsStaticZilchLibrary.cpp  SimpleZilchShaderIRGenerator.cpp  SimpleZilchShaderIRGenerator.hpp  TypeDependencyCollector.cpp  TypeDependencyCollector.hpp  ZilchShaderGlslBackend.cpp  ZilchShaderGlslBackend.hpp  ZilchShaderIRCompositor.cpp  ZilchShaderIRCompositor.hpp  ZilchShaderIRCore.cpp  ZilchShaderIRCore.hpp  ZilchShaderIRLibrary.cpp  ZilchShaderIRLibrary.hpp  ZilchShaderIRPasses.cpp  ZilchShaderIRShared.cpp  ZilchShaderIRShared.hpp  ZilchShaderIRTranslationPass.cpp  ZilchShaderSpirVBinaryBackend.cpp  ZilchShadersStandard.cpp  ZilchSpirVDisassemblerBackend.cpp  ZilchSpirVFrontEnd.cpp  ZilchSpirVFrontEnd.hpp  ZilchSpirVSettings.cpp  (+1 more)
Projects/ZeroEditor/: CMakeLists.txt
Projects/ZeroLauncher/: CMakeLists.txt
Projects/ZeroLauncher/ZeroLauncher/: CMakeLists.txt
Projects/ZeroLauncher/ZeroLauncherSharedLibrary/: CMakeLists.txt  LauncherComponents.cpp  VersionSelector.cpp
Systems/Content/: CMakeLists.txt  ZilchPluginContent.cpp
Systems/Engine/: Animation.hpp  AnimationNode.cpp  CMakeLists.txt  Cog.cpp  CogMetaComposition.cpp  CogOperations.cpp  CogPath.cpp  CogSerialization.cpp  Configuration.cpp  Configuration.hpp  DataSource.cpp  DataSource.hpp  Documentation.cpp  Engine.cpp  EngineContainers.hpp  EngineStandard.cpp  Gradient.hpp  HeightMap.cpp  JoystickSystem.cpp  LauncherConfiguration.cpp  ObjectStore.cpp  Operation.cpp  OsWindow.cpp  PropertyTrack.cpp  RaycastProvider.cpp  ResourceSystem.cpp  ResourceTable.cpp  SampleCurve.cpp  ShortcutsDoc.cpp  Space.cpp  Spline.cpp  Tracker.hpp  Tweakables.cpp  ZilchResource.cpp
Systems/Graphics/: CMakeLists.txt  GraphicsEngine.cpp  RenderTasks.cpp  RenderTasks.hpp  ZeroZilchShaderGlslBackend.cpp  ZilchShaderGenerator.cpp
Systems/Networking/: CMakeLists.txt  Generated.cmake  NetChannel.cpp  NetChannel.hpp  NetEvents.cpp  NetEvents.hpp  NetObject.cpp  NetPeer.cpp  NetProperty.cpp  NetProperty.hpp  NetTypes.cpp  NetTypes.hpp  NetUser.cpp  NetworkingStandard.cpp
Systems/Physics/: CMakeLists.txt  CollisionFilter.cpp  CollisionTable.cpp  GenericPhysicsMesh.cpp  GenericPhysicsMesh.hpp  GjkDebug.cpp  Integrators.cpp  InternalEdgeCorrection.cpp  MeshDebug.cpp  MultiConvexMesh.cpp  MultiConvexMesh.hpp  PhysicsCar.cpp  PhysicsMesh.cpp  PhysicsMeshBoundData.hpp  PhysicsRaycastProvider.cpp  PhysicsSolverConfig.cpp  PhysicsSpace.cpp  PhysicsStandard.cpp  RayCast.cpp  RayCast.hpp  SpringSystem.cpp  SpringSystem.hpp
Systems/Physics/Joints/: ConstraintAtoms.cpp  ConstraintAtoms.hpp  CustomJoint.cpp  GenericBasicSolver.cpp
Systems/Sound/: CMakeLists.txt  GeneratedAudio.cpp  SoundSpace.cpp
Systems/Startup/: CMakeLists.txt
Systems/ZilchScript/: CMakeLists.txt  ZilchPlugin.cpp
UnitTests/ZilchShadersTests/: CMakeLists.txt  Glsl.cpp  IrTests.cpp  main.cpp
UnitTests/ZilchShadersTests/IrErrorTests/: Implements.expected.errors.txt  Inheritance.expected.errors.txt
UnitTests/ZilchShadersTests/IrTests/: Basic.expected.spvtxt  Functions.expected.spvtxt  LogicalInstructions.expected.spvtxt  MembersTest.expected.spvtxt  SamplerTest.expected.spvtxt  Types.expected.spvtxt
ZeroLibraries/Common/: CMakeLists.txt  Platform.hpp
ZeroLibraries/Common/Containers/: Algorithm.hpp  BitStream.hpp  BitStream.inl  ByteBuffer.cpp  ByteBuffer.hpp  InList.hpp  SlotMap.hpp  TypeTraits.hpp
ZeroLibraries/Common/Lexer/: Lexer.inl
ZeroLibraries/Common/Math/: BlockVector3.cpp  BlockVector3.hpp  BoolVector2.cpp  BoolVector2.hpp  BoolVector3.cpp  BoolVector3.hpp  BoolVector4.cpp  BoolVector4.hpp  Curve.cpp  ExtendableMath.cpp  ExtendableMath.hpp  GaussSeidelSolver.hpp  GenericVector.hpp  GenericVector.inl  IndexPolicies.hpp  (+22 more)
ZeroLibraries/Dash/: CMakeLists.txt  LinkInbox.cpp  LinkOutbox.cpp  Peer.cpp  PeerLink.cpp  ReplicaConfig.hpp  ReplicaProperty.cpp  ReplicaProperty.hpp
ZeroLibraries/Geometry/: CMakeLists.txt  ConvexMeshDecomposition.cpp  DebugDrawStack.cpp  Epa.cpp  Epa.hpp  Geometry.cpp  Geometry.hpp  Gjk.cpp  IndexPool.hpp  Polygon.cpp  Polygon.hpp  QuickHull3D.cpp  Shape2D.cpp  Shape2D.hpp  Sphere.cpp  TrapezoidMap.cpp  Triangulator.cpp
ZeroLibraries/Meta/: AttributeExtension.cpp  CMakeLists.txt  MetaSelection.cpp  ZeroMetaArray.hpp
ZeroLibraries/Serialization/: Binary.cpp  Binary.hpp  CMakeLists.txt  DataTree.cpp  DataTree.hpp  DefaultSerializer.hpp  Serialization.hpp  Text.cpp  Text.hpp  ZeroContainers.hpp
ZeroLibraries/SpatialPartition/: AabbTreeMethods.hpp  AabbTreeMethods.inl  BaseNSquared.inl  BroadPhaseRanges.hpp  BroadPhaseTracker.cpp  BroadPhaseTracker.hpp  CMakeLists.txt  ProxyCast.hpp  Sap.inl  SapContainers.hpp  StaticAabbTree.hpp
ZeroLibraries/Support/: Archive.cpp  Archive.hpp  CMakeLists.txt  ChunkReader.hpp  HdrSupport.cpp  ImageSupport.cpp  PngSupport.cpp  StringReplacement.hpp
ZeroLibraries/Zilch/: CMakeLists.txt
(+420 files in other folders)
