################################################################################
# Add any files that need to be manually added in this file.
# Link: https://github.com/playmer/CmakeBuilder 
################################################################################
add_subdirectory(ZeroLauncher)
add_subdirectory(ZeroLauncherSharedLibrary)
